first integration test - green
