# pkg/api/openapi.yml
@@ -104,6 +104,10 @@ components:
       pattern: '^(A|2|3|4|5|6|7|8|9|10|J|Q|K)(C|D|H|S)$'
     Card:
       type: object
+      required:
+        - value
+        - suit
+        - code
       properties:
         value:
           $ref: '#/components/schemas/CardValue'
@@ -113,6 +117,8 @@ components:
           $ref: '#/components/schemas/CardCode'
     Cards:
       type: object
+      required:
+        - cards
       properties:
         cards:
           type: array
@@ -120,6 +126,10 @@ components:
             $ref: '#/components/schemas/Card'
     DeckBrief:
       type: object
+      required:
+        - deck_id
+        - shuffled
+        - remaining
       properties:
         deck_id:
           type: string
