# pkg/handler/handler.go
@@ -1,6 +1,13 @@
 package handler
 
-import "github.com/labstack/echo/v4"
+import (
+	"net/http"
+
+	"github.com/deepmap/oapi-codegen/pkg/types"
+	"github.com/google/uuid"
+	"github.com/labstack/echo/v4"
+	"github.com/mikayelaghasyan/card-deck-service/pkg/api"
+)
 
 type Handler struct {
 }
@@ -10,5 +17,10 @@ func NewHandler() (*Handler, error) {
 }
 
 func (h *Handler) PostDecks(c echo.Context) error {
-	return nil
+	response := &api.CreateDeckResponse{
+		DeckId:    types.UUID(uuid.NewString()),
+		Shuffled:  false,
+		Remaining: 52,
+	}
+	return c.JSON(http.StatusCreated, response)
 }
